safepoint相关增加